cmake_minimum_required(VERSION 3.8)
project(topology_msgs)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED)

rosidl_generate_interfaces(${PROJECT_NAME}
  "msg/TopologyMapPointInfo.msg"
  "msg/TopologyMap.msg"
  "msg/RouteInfo.msg"
  "msg/RouteConnection.msg"
  "msg/MapProperty.msg"
  "srv/NavToTopologyPoint.srv"
  DEPENDENCIES
)

ament_package() 